--- a/gokarting/gokarting.entitlements
+++ b/gokarting/gokarting.entitlements
@@ -12,5 +12,9 @@
 	<array>
 		<string>CloudKit</string>
 	</array>
+	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
+	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
+	<key>com.apple.external-accessory.wireless-configuration</key>
+	<true/>
 </dict>
 </plist>
